# llm-privacy

./: .gitignore  README.md
client/: package-lock.json  package.json
client/src/: App.tsx
client/src/components/: chat.tsx  signin.tsx
client/src/styles/: chat.css  signin.css
server/: Cargo.toml
server/src/: chat.rs  common.rs  main.rs
