[package]
name = "kalosm"
version = "0.1.0"
edition = "2021"

[dependencies]
kalosm = { git = "https://github.com/floneum/floneum", version = "0.3.2", features = ["full"] }
tokio = { version = "1.41.1", features = ["full"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_cors = "0.6.0"
serde = "1.0.195"
serde_json = "1.0"
chrono = "0.4.31"
toml = "0.2.1"
rocket_firebase_auth = "0.5.0"

[dependencies.rocket_dyn_templates]
version = "0.1.0-rc.1"
features = ["handlebars", "tera"]